// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-container-1"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
  >
    <div
      className="MuiGrid-container-1 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 Loader-root-98"
    >
      <div
        className="MuiCircularProgress-root-101 MuiCircularProgress-colorPrimary-104 MuiCircularProgress-indeterminate-103"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-106"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-107 MuiCircularProgress-circleIndeterminate-109"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-container-229"
>
  <div
    className="MuiGrid-item-230 MuiGrid-grid-xs-12-269"
  >
    <div
      className="MuiGrid-container-229 MuiGrid-align-items-xs-center-237 MuiGrid-justify-xs-center-246 Loader-root-326"
    >
      <div
        className="MuiCircularProgress-root-329 MuiCircularProgress-colorPrimary-332 MuiCircularProgress-indeterminate-331"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-334"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-335 MuiCircularProgress-circleIndeterminate-337"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-container-111"
>
  <div
    className="MuiGrid-item-112 MuiGrid-grid-xs-12-151"
  >
    <div
      className="MuiGrid-container-111 MuiGrid-align-items-xs-center-119 MuiGrid-justify-xs-center-128 Loader-root-208"
    >
      <div
        className="MuiLinearProgress-root-211 MuiLinearProgress-colorPrimary-212 MuiLinearProgress-indeterminate-215 Loader-linear-210"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar-221 MuiLinearProgress-barColorPrimary-222 MuiLinearProgress-bar1Indeterminate-224"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar-221 MuiLinearProgress-barColorPrimary-222 MuiLinearProgress-bar2Indeterminate-227"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-339 MuiGrid-spacing-xs-24-363"
    >
      <div
        className="MuiDrawer-root-436 MuiDrawer-docked-437"
      >
        <div
          className="MuiPaper-root-448 MuiPaper-elevation0-450 MuiDrawer-paper-438 MuiDrawer-paperAnchorLeft-439 MuiDrawer-paperAnchorDockedLeft-443"
          style={Object {}}
        >
          <nav
            className="MuiList-root-485 MuiList-padding-486 SideMenu-root-476 Component-flexed-475"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-477"
            />
            <div
              className="MuiButtonBase-root-501 MuiListItem-root-489 MuiListItem-default-492 MuiListItem-gutters-497 SideMenu-listItemGutters-479 MuiListItem-button-498 SideMenu-listItem-478"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-504"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-505"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-514 SideMenu-listItemText-481"
              >
                <span
                  className="MuiTypography-root-520 MuiTypography-body1-529 MuiListItemText-primary-517 SideMenu-listItemPrimary-480"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-560"
              />
            </div>
            <div
              className="MuiButtonBase-root-501 MuiListItem-root-489 MuiListItem-default-492 MuiListItem-gutters-497 SideMenu-listItemGutters-479 MuiListItem-button-498 SideMenu-listItem-478"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-504"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-505"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-514 SideMenu-listItemText-481"
              >
                <span
                  className="MuiTypography-root-520 MuiTypography-body1-529 MuiListItemText-primary-517 SideMenu-listItemPrimary-480"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-560"
              />
            </div>
            <div
              className="MuiButtonBase-root-501 MuiListItem-root-489 MuiListItem-default-492 MuiListItem-gutters-497 SideMenu-listItemGutters-479 MuiListItem-button-498 SideMenu-listItem-478"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-504"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-505"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-514 SideMenu-listItemText-481"
              >
                <span
                  className="MuiTypography-root-520 MuiTypography-body1-529 MuiListItemText-primary-517 SideMenu-listItemPrimary-480"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-505"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root-560"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-795 MuiGrid-spacing-xs-24-819"
    >
      <div
        className="MuiDrawer-root-892 MuiDrawer-docked-893"
      >
        <div
          className="MuiPaper-root-904 MuiPaper-elevation0-906 MuiDrawer-paper-894 MuiDrawer-paperAnchorLeft-895 MuiDrawer-paperAnchorDockedLeft-899"
          style={Object {}}
        >
          <nav
            className="MuiList-root-941 MuiList-padding-942 SideMenu-root-932 Component-flexed-931"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-933"
            />
            <div
              className="MuiButtonBase-root-957 MuiListItem-root-945 MuiListItem-default-948 MuiListItem-gutters-953 SideMenu-listItemGutters-935 MuiListItem-button-954 SideMenu-activeItem-940"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-960"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-961"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-970 SideMenu-listItemText-937 SideMenu-listItemHidden-938"
              >
                <span
                  className="MuiTypography-root-976 MuiTypography-body1-985 MuiListItemText-primary-973 SideMenu-listItemPrimary-936"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-1016"
              />
            </div>
            <div
              className="MuiButtonBase-root-957 MuiListItem-root-945 MuiListItem-default-948 MuiListItem-gutters-953 SideMenu-listItemGutters-935 MuiListItem-button-954 SideMenu-listItem-934"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-960"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-961"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-970 SideMenu-listItemText-937 SideMenu-listItemHidden-938"
              >
                <span
                  className="MuiTypography-root-976 MuiTypography-body1-985 MuiListItemText-primary-973 SideMenu-listItemPrimary-936"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-1016"
              />
            </div>
            <div
              className="MuiButtonBase-root-957 MuiListItem-root-945 MuiListItem-default-948 MuiListItem-gutters-953 SideMenu-listItemGutters-935 MuiListItem-button-954 SideMenu-listItem-934"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-960"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-961"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-970 SideMenu-listItemText-937 SideMenu-listItemHidden-938"
              >
                <span
                  className="MuiTypography-root-976 MuiTypography-body1-985 MuiListItemText-primary-973 SideMenu-listItemPrimary-936"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-1016"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-567 MuiGrid-spacing-xs-24-591"
    >
      <div
        className="MuiDrawer-root-664 MuiDrawer-docked-665"
      >
        <div
          className="MuiPaper-root-676 MuiPaper-elevation0-678 MuiDrawer-paper-666 MuiDrawer-paperAnchorLeft-667 MuiDrawer-paperAnchorDockedLeft-671"
          style={Object {}}
        >
          <nav
            className="MuiList-root-713 MuiList-padding-714 SideMenu-root-704 Component-flexed-703"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-705"
            />
            <div
              className="MuiButtonBase-root-729 MuiListItem-root-717 MuiListItem-default-720 MuiListItem-gutters-725 SideMenu-listItemGutters-707 MuiListItem-button-726 SideMenu-activeItem-712"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-732"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-733"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-742 SideMenu-listItemText-709"
              >
                <span
                  className="MuiTypography-root-748 MuiTypography-body1-757 MuiListItemText-primary-745 SideMenu-listItemPrimary-708"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-788"
              />
            </div>
            <div
              className="MuiButtonBase-root-729 MuiListItem-root-717 MuiListItem-default-720 MuiListItem-gutters-725 SideMenu-listItemGutters-707 MuiListItem-button-726 SideMenu-listItem-706"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-732"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-733"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-742 SideMenu-listItemText-709"
              >
                <span
                  className="MuiTypography-root-748 MuiTypography-body1-757 MuiListItemText-primary-745 SideMenu-listItemPrimary-708"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-788"
              />
            </div>
            <div
              className="MuiButtonBase-root-729 MuiListItem-root-717 MuiListItem-default-720 MuiListItem-gutters-725 SideMenu-listItemGutters-707 MuiListItem-button-726 SideMenu-listItem-706"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="MuiListItemIcon-root-732"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-733"
                  focusable="false"
                  role="presentation"
                  style={
                    Object {
                      "color": "#fff",
                      "margin": "0",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                className="MuiListItemText-root-742 SideMenu-listItemText-709"
              >
                <span
                  className="MuiTypography-root-748 MuiTypography-body1-757 MuiListItemText-primary-745 SideMenu-listItemPrimary-708"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-733"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root-788"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1864 MuiGrid-spacing-xs-24-1888"
    >
      <div
        className="MuiGrid-item-1865 MuiGrid-grid-xs-12-1904"
      >
        <div
          className="MuiPaper-root-1968 MuiPaper-elevation2-1972 MuiPaper-rounded-1969 Widget-root-1961"
        >
          <div
            className="MuiGrid-container-1864 MuiGrid-direction-xs-column-1867 Widget-container-1962"
          >
            <div
              className="MuiGrid-item-1865"
            >
              <h6
                className="MuiTypography-root-1995 MuiTypography-h6-2012 MuiTypography-colorInherit-2024 MuiTypography-gutterBottom-2022"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-1864 MuiGrid-item-1865 Widget-content-1963"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-2535 MuiGrid-spacing-xs-24-2559"
    >
      <div
        className="MuiGrid-item-2536 MuiGrid-grid-xs-12-2575"
      >
        <div
          className="MuiPaper-root-2642 MuiPaper-elevation2-2646 MuiPaper-rounded-2643 Widget-root-2635"
        >
          <div
            className="MuiGrid-container-2535 MuiGrid-direction-xs-column-2538 Widget-container-2636"
          >
            <div
              className="MuiGrid-item-2536"
            >
              <h6
                className="MuiTypography-root-2669 MuiTypography-h6-2686 MuiTypography-colorInherit-2698 MuiTypography-gutterBottom-2696"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-container-2535 MuiGrid-item-2536 Widget-content-2637 Component-content-2632"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-2031 MuiGrid-spacing-xs-24-2055"
    >
      <div
        className="MuiGrid-item-2032 MuiGrid-grid-xs-12-2071"
      >
        <div
          className="MuiPaper-root-2135 MuiPaper-elevation2-2139 MuiPaper-rounded-2136 Widget-root-2128 Widget-featured-2134"
        >
          <div
            className="MuiGrid-container-2031 MuiGrid-direction-xs-column-2034 Widget-container-2129"
          >
            <div
              className="MuiGrid-item-2032"
            >
              <h6
                className="MuiTypography-root-2162 MuiTypography-h6-2179 MuiTypography-colorInherit-2191 MuiTypography-gutterBottom-2189"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-2031 MuiGrid-item-2032 Widget-content-2130"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-2368 MuiGrid-spacing-xs-24-2392"
    >
      <div
        className="MuiGrid-item-2369 MuiGrid-grid-xs-12-2408"
      >
        <div
          className="MuiPaper-root-2472 MuiPaper-elevation2-2476 Widget-root-2465"
        >
          <div
            className="MuiGrid-container-2368 MuiGrid-direction-xs-column-2371 Widget-container-2466"
          >
            <div
              className="MuiGrid-item-2369"
            >
              <h6
                className="MuiTypography-root-2499 MuiTypography-h6-2516 MuiTypography-colorInherit-2528 MuiTypography-gutterBottom-2526"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-container-2368 MuiGrid-item-2369 Widget-content-2467"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-2198 MuiGrid-spacing-xs-24-2222"
    >
      <div
        className="MuiGrid-item-2199 MuiGrid-grid-xs-12-2238"
      >
        <div
          className="MuiGrid-container-2198 MuiGrid-spacing-xs-24-2222"
        >
          <div
            className="MuiGrid-item-2199 MuiGrid-grid-xs-6-2232"
          >
            <div
              className="MuiPaper-root-2305 MuiPaper-elevation2-2309 MuiPaper-rounded-2306 Widget-root-2298 Widget-border-2301 Widget-border-top-2302"
            >
              <div
                className="MuiGrid-container-2198 MuiGrid-direction-xs-column-2201 Widget-container-2299"
              >
                <div
                  className="MuiGrid-item-2199"
                >
                  <h6
                    className="MuiTypography-root-2332 MuiTypography-h6-2349 MuiTypography-colorInherit-2361 MuiTypography-gutterBottom-2359"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-2198 MuiGrid-item-2199 Widget-content-2300"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-2199 MuiGrid-grid-xs-6-2232"
          >
            <div
              className="MuiPaper-root-2305 MuiPaper-elevation2-2309 MuiPaper-rounded-2306 Widget-root-2298 Widget-border-2301 Widget-border-bottom-2303"
            >
              <div
                className="MuiGrid-container-2198 MuiGrid-direction-xs-column-2201 Widget-container-2299"
              >
                <div
                  className="MuiGrid-item-2199"
                >
                  <h6
                    className="MuiTypography-root-2332 MuiTypography-h6-2349 MuiTypography-colorInherit-2361 MuiTypography-gutterBottom-2359"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-2198 MuiGrid-item-2199 Widget-content-2300"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-2199 MuiGrid-grid-xs-6-2232"
          >
            <div
              className="MuiPaper-root-2305 MuiPaper-elevation2-2309 MuiPaper-rounded-2306 Widget-root-2298 Widget-border-2301 Component-customTopBorder-2296 Widget-border-top-2302"
            >
              <div
                className="MuiGrid-container-2198 MuiGrid-direction-xs-column-2201 Widget-container-2299"
              >
                <div
                  className="MuiGrid-item-2199"
                >
                  <h6
                    className="MuiTypography-root-2332 MuiTypography-h6-2349 MuiTypography-colorInherit-2361 MuiTypography-gutterBottom-2359"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-2198 MuiGrid-item-2199 Widget-content-2300"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-2199 MuiGrid-grid-xs-6-2232"
          >
            <div
              className="MuiPaper-root-2305 MuiPaper-elevation2-2309 MuiPaper-rounded-2306 Widget-root-2298 Widget-border-2301 Component-customBotomBorder-2297 Widget-border-bottom-2303"
            >
              <div
                className="MuiGrid-container-2198 MuiGrid-direction-xs-column-2201 Widget-container-2299"
              >
                <div
                  className="MuiGrid-item-2199"
                >
                  <h6
                    className="MuiTypography-root-2332 MuiTypography-h6-2349 MuiTypography-colorInherit-2361 MuiTypography-gutterBottom-2359"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-2198 MuiGrid-item-2199 Widget-content-2300"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1023 MuiGrid-spacing-xs-24-1047"
    >
      <div
        className="MuiGrid-item-1024 MuiGrid-grid-xs-12-1063"
      >
        <div
          className="MuiPaper-root-1127 MuiPaper-elevation2-1131 MuiPaper-rounded-1128 Widget-root-1120"
        >
          <div
            className="MuiGrid-container-1023 MuiGrid-direction-xs-column-1026 Widget-container-1121"
          >
            <div
              className="MuiGrid-item-1024"
            >
              <h6
                className="MuiTypography-root-1154 MuiTypography-h6-1171 MuiTypography-colorInherit-1183 MuiTypography-gutterBottom-1181"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-1023 MuiGrid-item-1024 Widget-content-1122"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1694 MuiGrid-spacing-xs-24-1718"
    >
      <div
        className="MuiGrid-item-1695 MuiGrid-grid-xs-12-1734"
      >
        <div
          className="MuiPaper-root-1801 MuiPaper-elevation2-1805 MuiPaper-rounded-1802 Widget-root-1794"
        >
          <div
            className="MuiGrid-container-1694 MuiGrid-direction-xs-column-1697 Widget-container-1795"
          >
            <div
              className="MuiGrid-item-1695"
            >
              <h6
                className="MuiTypography-root-1828 MuiTypography-h6-1845 MuiTypography-colorInherit-1857 MuiTypography-gutterBottom-1855"
              >
                Custom content height
              </h6>
            </div>
            <div
              className="MuiGrid-container-1694 MuiGrid-item-1695 Widget-content-1796 Component-content-1791"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1190 MuiGrid-spacing-xs-24-1214"
    >
      <div
        className="MuiGrid-item-1191 MuiGrid-grid-xs-12-1230"
      >
        <div
          className="MuiPaper-root-1294 MuiPaper-elevation2-1298 MuiPaper-rounded-1295 Widget-root-1287 Widget-featured-1293"
        >
          <div
            className="MuiGrid-container-1190 MuiGrid-direction-xs-column-1193 Widget-container-1288"
          >
            <div
              className="MuiGrid-item-1191"
            >
              <h6
                className="MuiTypography-root-1321 MuiTypography-h6-1338 MuiTypography-colorInherit-1350 MuiTypography-gutterBottom-1348"
              >
                Title
              </h6>
            </div>
            <div
              className="MuiGrid-container-1190 MuiGrid-item-1191 Widget-content-1289"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1527 MuiGrid-spacing-xs-24-1551"
    >
      <div
        className="MuiGrid-item-1528 MuiGrid-grid-xs-12-1567"
      >
        <div
          className="MuiPaper-root-1631 MuiPaper-elevation2-1635 Widget-root-1624"
        >
          <div
            className="MuiGrid-container-1527 MuiGrid-direction-xs-column-1530 Widget-container-1625"
          >
            <div
              className="MuiGrid-item-1528"
            >
              <h6
                className="MuiTypography-root-1658 MuiTypography-h6-1675 MuiTypography-colorInherit-1687 MuiTypography-gutterBottom-1685"
              >
                I have no rounded borders
              </h6>
            </div>
            <div
              className="MuiGrid-container-1527 MuiGrid-item-1528 Widget-content-1626"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1357 MuiGrid-spacing-xs-24-1381"
    >
      <div
        className="MuiGrid-item-1358 MuiGrid-grid-xs-12-1397"
      >
        <div
          className="MuiGrid-container-1357 MuiGrid-spacing-xs-24-1381"
        >
          <div
            className="MuiGrid-item-1358 MuiGrid-grid-xs-6-1391"
          >
            <div
              className="MuiPaper-root-1464 MuiPaper-elevation2-1468 MuiPaper-rounded-1465 Widget-root-1457 Widget-border-1460 Widget-border-top-1461"
            >
              <div
                className="MuiGrid-container-1357 MuiGrid-direction-xs-column-1360 Widget-container-1458"
              >
                <div
                  className="MuiGrid-item-1358"
                >
                  <h6
                    className="MuiTypography-root-1491 MuiTypography-h6-1508 MuiTypography-colorInherit-1520 MuiTypography-gutterBottom-1518"
                  >
                    Border top
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1357 MuiGrid-item-1358 Widget-content-1459"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-1358 MuiGrid-grid-xs-6-1391"
          >
            <div
              className="MuiPaper-root-1464 MuiPaper-elevation2-1468 MuiPaper-rounded-1465 Widget-root-1457 Widget-border-1460 Widget-border-bottom-1462"
            >
              <div
                className="MuiGrid-container-1357 MuiGrid-direction-xs-column-1360 Widget-container-1458"
              >
                <div
                  className="MuiGrid-item-1358"
                >
                  <h6
                    className="MuiTypography-root-1491 MuiTypography-h6-1508 MuiTypography-colorInherit-1520 MuiTypography-gutterBottom-1518"
                  >
                    Border bottom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1357 MuiGrid-item-1358 Widget-content-1459"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-1358 MuiGrid-grid-xs-6-1391"
          >
            <div
              className="MuiPaper-root-1464 MuiPaper-elevation2-1468 MuiPaper-rounded-1465 Widget-root-1457 Widget-border-1460 Component-customTopBorder-1455 Widget-border-top-1461"
            >
              <div
                className="MuiGrid-container-1357 MuiGrid-direction-xs-column-1360 Widget-container-1458"
              >
                <div
                  className="MuiGrid-item-1358"
                >
                  <h6
                    className="MuiTypography-root-1491 MuiTypography-h6-1508 MuiTypography-colorInherit-1520 MuiTypography-gutterBottom-1518"
                  >
                    Border top custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1357 MuiGrid-item-1358 Widget-content-1459"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-1358 MuiGrid-grid-xs-6-1391"
          >
            <div
              className="MuiPaper-root-1464 MuiPaper-elevation2-1468 MuiPaper-rounded-1465 Widget-root-1457 Widget-border-1460 Component-customBotomBorder-1456 Widget-border-bottom-1462"
            >
              <div
                className="MuiGrid-container-1357 MuiGrid-direction-xs-column-1360 Widget-container-1458"
              >
                <div
                  className="MuiGrid-item-1358"
                >
                  <h6
                    className="MuiTypography-root-1491 MuiTypography-h6-1508 MuiTypography-colorInherit-1520 MuiTypography-gutterBottom-1518"
                  >
                    Border bottom custom
                  </h6>
                </div>
                <div
                  className="MuiGrid-container-1357 MuiGrid-item-1358 Widget-content-1459"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
